[workspace]
members = [
    "core",
    "tools/asset-converter"
]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Enable link-time optimization
lto = true